# ielts-agent

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
.cursor/plans/: ielts_system_redesign_aa2182a4.plan.md  ielts_video_curriculum_evolution_a07f0abe.plan.md  practice_template_pool_00cf1d48.plan.md  weakness-driven_lesson_videos_9347de47.plan.md
api/: index.py
backend/: agents.py  ai.py  assistant_context.py  auth.py  content_policy.py  curriculum_compiler.py  database.py  diagnostic.py  learning.py  lesson_agent.py  lesson_graph_ops.py  lesson_pipeline.py  lesson_scale.py  lesson_selection.py  lesson_topics_pool.py  lesson_video_openrouter.py  lesson_weakness.py  main.py  models.py  practice_pool.py  skill_graph.py  skills_taxonomy.py  speech_openai.py  vocab_agent.py
backend/config/: lesson_topics.json  skill_dependencies.json  skills.json
backend/config/practice_templates/: seed-listening-band6-l2.json  seed-reading-band6-r1.json  seed-reading-band6-r2.json  seed-reading-band6-wildcard.json  seed-speaking-band6-s1.json  seed-writing-band6-task2.json
backend/scripts/: seed_practice_templates.py
frontend/: app.js  index.html  package-lock.json  package.json  style.css  vite.config.js
frontend/src/: App.jsx  index.jsx
frontend/src/assets/theme/: index.js
frontend/src/components/AiChatWidget/: index.jsx
frontend/src/constants/: ieltsPapers.js
frontend/src/context/: AuthContext.jsx  index.jsx
frontend/src/services/: api.js
frontend/src/utils/: ieltsMicroBand.js  pageLayout.js  skillLabel.js
(+25 files in other folders)
