[tool.poetry]
name = "ielts-agent"
version = "0.1.0"
description = "IELTS practice agent backend and API"
authors = ["memoryofayllwros <jingwang.official@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
openai = ">=1.30.0"
httpx = ">=0.27.0"
fastapi = ">=0.110.0"
python-multipart = ">=0.0.9"
uvicorn = { version = ">=0.27.0", extras = ["standard"] }
python-dotenv = ">=1.0.0"
motor = ">=3.4.0"
pyjwt = ">=2.8.0"
bcrypt = ">=4.0.0"
json-repair = ">=0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
